--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.antonyt.infiniteviewpager">
+  package="ws.temp.infiniteviewpager">
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="com.antonyt.infiniteviewpager.InfiniteViewPagerActivity"
+        <activity android:name="ws.temp.infiniteviewpager.InfiniteViewPagerActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
